# pokemon-md-agent

./: .env.example  .gitignore  .temp_check_ram.py  AGENTS.md  ARCHITECTURE_ANALYSIS_SUMMARY.txt  CLAUDE_CODE_COMPLETION_SUMMARY.md  DEADLINE_EXECUTION_PLAN.md  DEMO_EXECUTION_SUMMARY.md  DEMO_READY.md  FINAL_SUMMARY.md  GITHUB_UPLOAD_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_COMPLETION_REPORT.md  LICENSE  MANIFEST.in  MORNING_ACTION_PLAN.md  PRIORITY_1_2_COMPLETION_SUMMARY.md  PRODUCTION_RUNBOOK.md  README.md  REPORT_SMART.md  REPO_UPLOAD_STATUS.md  SESSION_ANALYSIS_001.md  SESSION_SUMMARY.md  SKILL_IMPROVEMENTS_SUMMARY.md  STANDUP_REPORT.md  STATUS_AND_NEXT_STEPS.md  VISION_PHASE1_SUMMARY.md  VISION_PHASE2_SUMMARY.md  agent_log.txt  analyze_dumps.py  analyze_test_results.py  check_models.py  checkpoint.md  demo_agent.py  final_analysis.py  launch_armada_test.py  launch_unsloth_test.sh  monitor_and_analyze.sh  monitor_test_progress.py  pyproject.toml  (+14 more)
.serena/: project.yml
RUNTIME/: .cc_rate.json
agent_mailbox/: runtime_fix_needed.md
config/: agent_config.yaml  mgba_config.ini  sprite_library.yaml
demos/: embedding_visualization.py  rag_demo.py
docs/: CLAUDE_CODE_STATUS_REPORT.md  DASHBOARD_AND_MEMORY_INTEGRATION_VERIFIED.md  FEATURE_INVENTORY_AND_RECOVERY.md  OPERATIONS_RUNBOOK.md  PROMPT_OPTIMIZATION_GUIDE.md  REAL_MODELS.md  agent-scaffold.md  build_indexes.py  demo_execution_summary.json  demo_execution_summary.md  embedding-types.md  hf_home_path_sanitization_adr.md  index.html  integration_guide.md  maintenance.md  missing_features_analysis.md  netio.md  optimization_roadmap.md  prompt_engineering_findings.md  rag-system-architecture.md  ram-primitives.md  retrieval_architecture.md  runtime_fix_needed.md  skills_pause_checkpoint.md  vision_tools.md
examples/: adaptive_dungeon_exploration_skill.py  navigate_to_stairs.py  quickstart.py
profiling/: baseline_measure.py  baseline_results_2025-10-30.json  baseline_summary_2025-10-30.txt  bench_qwen_vl.py  benchmark_results.csv  bottleneck_analysis_2025-10-30.md  capture_tinywoods.py  cpu_baseline_2025-10-29.prof  cpu_baseline_2025-10-30.prof  cpu_hotspots_2025-10-29.txt  cpu_profiling.py  gpu_baseline_2025-10-29.json  gpu_model_comparison_2025-10-29.txt  gpu_profiling.py  io_baseline_2025-10-29.md  io_profiling.py  memory_baseline_2025-10-29.json  memory_baseline_2025-10-29.txt  memory_baseline_2025-10-30.json  memory_baseline_2025-10-30.txt  memory_profiling.py  tasks.py  tmp_button_snippet.txt
scripts/: __init__.py  bench_sweep.ps1  bench_sweep.sh  check_you_api.py  demo_live_armada.ps1  demo_with_youcom.py  enable_real_models.ps1  enable_real_models.sh  final_demo_runner.py  finalize_and_snapshot.bat  finalize_and_snapshot.sh  generate_montage_video.py  push_now.bat  push_to_github.bat  push_to_github.sh  start_mgba.ps1  (+15 more)
(+287 files in other folders)
